# console

./: .envrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  console.toml  default.nix  dist-workspace.toml  flake.nix  netlify.toml  release-plz.toml  rust-toolchain.toml  shell.nix  tokio-console.nix
.cargo/: config  config.toml
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yaml  audit.yml  ci.yaml  ci.yml  flakehub-publish-tagged.yml  release-plz.yml  release.yaml  release.yml
console/: CHANGELOG.md  Cargo.toml  README.md
console-api/: CHANGELOG.md  Cargo.toml  README.md  build.rs
console-api/proto/: async_ops.proto  common.proto  consequences.proto  instrument.proto  resources.proto  tasks.proto  trace.proto
console-api/src/: async_ops.rs  common.rs  consequences.rs  instrument.rs  lib.rs  resource_ops.rs  resources.rs  tasks.rs  trace.rs
console-api/tests/: bootstrap.rs
console-subscriber/: CHANGELOG.md  Cargo.toml  README.md
console-subscriber/examples/: app.rs  barrier.rs  busy_loop.rs  dump.rs  grpc_web.rs  local.rs  long_scheduled.rs  long_sleep.rs  mutex.rs  nested.rs  rayon-app.rs  rwlock.rs  semaphore.rs  uds.rs
console-subscriber/examples/grpc_web/: README.md  main.rs
console-subscriber/examples/grpc_web/app/: .prettierignore  buf.gen.yaml  index.html  package-lock.json  package.json
console-subscriber/examples/grpc_web/app/src/: App.tsx
console-subscriber/src/: aggregator.rs  attribute.rs  attribute_new.rs  builder.rs  callsites.rs  consequences.rs  init.rs  lib.rs  record.rs  stack.rs  stats.rs  sync.rs  visitors.rs
console-subscriber/src/aggregator/: id_data.rs  mod.rs  shrink.rs  task_data.rs
console-subscriber/tests/: framework.rs  poll.rs  spawn.rs  wake.rs
console-subscriber/tests/support/: mod.rs  state.rs  subscriber.rs  subscriber2.rs  task.rs
console-util/: Cargo.toml
console-util/src/: duration.rs  lib.rs
console/src/: config.rs  conn.rs  input.rs  intern.rs  lib.rs  main.rs  tasks.rs  term.rs  util.rs  warnings.rs
console/src/state/: async_ops.rs  mod.rs  resources.rs  tasks.rs
console/src/view/: async_ops.rs  colors.rs  mini_histogram.rs  mod.rs  percentiles.rs  resource.rs  resources.rs  styles.rs  table.rs  task.rs  tasks.rs
nix/: default.nix  shell.nix  tokio-console.nix
proto/: async_ops.proto  common.proto  instrument.proto  resource_ops.proto  resources.proto  tasks.proto  trace.proto
tokio-console/: CHANGELOG.md  Cargo.toml  README.md  args.example  cli-ui.stdout  console.example.toml
tokio-console/src/: config.rs  conn.rs  input.rs  intern.rs  lib.rs  main.rs  term.rs  warnings.rs
tokio-console/src/state/: async_ops.rs  histogram.rs  id.rs  mod.rs  resources.rs  store.rs  tasks.rs  trace.rs
tokio-console/src/view/: async_ops.rs  controls.rs  durations.rs  help.rs  mini_histogram.rs  mod.rs  percentiles.rs  resource.rs  resources.rs  styles.rs  table.rs  task.rs  tasks.rs
tokio-console/tests/: cli-ui.rs  cli-ui.stdout  cli-ui.toml  mod.rs
tokio-console/tests/ui/: mod.rs
tokio-console/wix/: main.wxs
xtask/: Cargo.toml
xtask/src/: main.rs
