[package]
name = "console-api"
version = "0.2.0"
license = "MIT"
edition = "2021"
rust-version = "1.56.0"
authors = ["Eliza Weisman <eliza@buoyant.io>", "Tokio Contributors <team@tokio.rs>",]
readme = "README.md"
repository = "https://github.com/tokio-rs/console/"
homepage = "https://github.com/tokio-rs/console/blob/main/console-api"
description = """
Protobuf wire format bindings for the Tokio console.
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = [
    "tracing",
    "tokio-console",
    "debugging",
    "async",
    "tonic",
]

[features]
# Generate code that is compatible with Tonic's `transport` module.
transport = ["tonic-build/transport", "tonic/transport"]

[dependencies]
tonic = { version = "0.7", default-features = false, features = [
    "prost",
    "codegen",
    "transport",
] }
prost = "0.10"
prost-types = "0.10"
tracing-core = "0.1.17"

[dev-dependencies]
tonic-build = { version = "0.7", default-features = false, features = [
    "prost", "transport"
] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]