[package]
name = "console-api"
version = "0.5.0"
license = "MIT"
edition = "2021"
rust-version = "1.60.0"
authors = ["Eliza Weisman <eliza@buoyant.io>", "Tokio Contributors <team@tokio.rs>",]
readme = "README.md"
repository = "https://github.com/tokio-rs/console/"
homepage = "https://github.com/tokio-rs/console/blob/main/console-api"
description = """
Protobuf wire format bindings for the Tokio console.
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = [
    "tracing",
    "tokio-console",
    "debugging",
    "async",
    "tonic",
]

[features]
# Generate code that is compatible with Tonic's `transport` module.
transport = ["tonic/transport"]

[dependencies]
tonic = { version = "0.10", default-features = false, features = [
    "prost",
    "codegen",
    "transport",
] }
prost = "0.12"
prost-types = "0.12"
tracing-core = "0.1.17"
futures-core = "0.3"

[dev-dependencies]
tonic-build = { version = "0.10", default-features = false, features = [
    "prost", "transport"
] }
# explicit dep so we can get the version with fixed whitespace.
prost-build = "0.12.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
