[package]
name = "console-subscriber"
version = "0.4.1"
license = "MIT"
edition = "2021"
rust-version = "1.74.0"
authors = ["Eliza Weisman <eliza@buoyant.io>", "Tokio Contributors <team@tokio.rs>",]
readme = "README.md"
repository = "https://github.com/tokio-rs/console/"
homepage = "https://github.com/tokio-rs/console/blob/main/console-subscriber"
description = """
A `tracing-subscriber::Layer` for collecting Tokio console telemetry.
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = [
    "tracing",
    "tracing-subscriber",
    "tokio-console",
    "debugging",
    "async",
]

[features]
default = ["env-filter"]
parking_lot = ["dep:parking_lot", "tracing-subscriber/parking_lot"]
env-filter = ["tracing-subscriber/env-filter"]
grpc-web = ["dep:tonic-web"]
vsock = ["dep:tokio-vsock"]

[dependencies]
crossbeam-utils = "0.8.7"
tokio = { version = "1.34", features = ["sync", "time", "macros", "tracing"] }
tokio-stream = { version = "0.1.16", features = ["net"] }
thread_local = "1.1.4"
console-api = { version = "0.8.0", path = "../console-api", features = ["transport"] }
tonic = { version = "0.13.0", features = ["transport"] }
tracing-core = "0.1.30"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "registry"] }
futures-task = { version = "0.3.31", default-features = false }
hdrhistogram = { version = "7.4.0", default-features = false, features = ["serialization"] }
parking_lot = { version = "0.12.1", optional = true }
humantime = "2.1.0"
prost = "0.13.3"
prost-types = "0.13.3"
hyper-util = { version = "0.1.6", features = ["tokio"] }

# Required for recording:
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"

# Only for the web feature:
tonic-web = { version = "0.13", optional = true }

# Only for the vsock feature:
tokio-vsock = { version = "0.7.1", optional = true, features = ["tonic013"]}

[dev-dependencies]
tokio = { version = "1.34", features = ["full", "rt-multi-thread"] }
tower = { version = "0.4.12", default-features = false, features = ["util"] }
futures = "0.3"
http = "1.1"
tower-http = { version = "0.5", features = ["cors"] }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ 'cfg(tokio_unstable)', 'cfg(console_without_tokio_unstable)' ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "grpc_web"
required-features = ["grpc-web"]
