[package]
name = "tokio-console"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>", "David Barsky <me@davidbarsky.com>"]
edition = "2018"
repository = "https://github.com/tokio-rs/console"

[dependencies]
atty = "0.2"
console-api = { path = "../console-api", features = ["transport"]}
clap = "3.0.0-beta.2"
tokio = { version = "1", features = ["full", "rt-multi-thread"]}
tonic = { version = "0.5", features = ["transport"] }
futures = "0.3"
tui = { version = "0.16.0", default-features = false, features = ["crossterm"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2.16"
tracing-journald = "0.1"
prost-types = "0.8"
crossterm = { version = "0.20", features = ["event-stream"] }
color-eyre = { version = "0.5", features = ["issue-url"] }
hdrhistogram = { version = "7.3.0", default-features = false, features = ["serialization"] }
h2 = "0.3"
regex = "1.5"
once_cell = "1.8"
humantime = "2.1.0"
