[package]
name = "tokio-console"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/tokio-rs/console"
edition = "2021"
rust-version = "1.56.0"
authors = ["Eliza Weisman <eliza@buoyant.io>", "Tokio Contributors <team@tokio.rs>",]
readme = "README.md"
homepage = "https://github.com/tokio-rs/console/blob/main/console"
description = """
The Tokio console: a debugger for async Rust.
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "command-line-utilities",
    "asynchronous",
]
keywords = [
    "tracing",
    "tokio-console",
    "debugging",
    "console",
    "async",
]

[dependencies]
atty = "0.2"
console-api = { path = "../console-api", features = ["transport"] }
clap = { version = "3.0.0-beta.5", features = ["cargo", "derive", "env"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tonic = { version = "0.6", features = ["transport"] }
futures = "0.3"
tui = { version = "0.16.0", default-features = false, features = ["crossterm"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tracing-journald = "0.2"
prost-types = "0.9"
crossterm = { version = "0.20", features = ["event-stream"] }
color-eyre = { version = "0.5", features = ["issue-url"] }
hdrhistogram = { version = "7.3.0", default-features = false, features = ["serialization"] }
h2 = "0.3"
regex = "1.5"
once_cell = "1.8"
humantime = "2.1.0"
