[package]
name = "tokio-console"
version = "0.1.10"
license = "MIT"
repository = "https://github.com/tokio-rs/console"
edition = "2021"
rust-version = "1.64.0"
authors = ["Eliza Weisman <eliza@buoyant.io>", "Tokio Contributors <team@tokio.rs>",]
readme = "README.md"
default-run = "tokio-console"
homepage = "https://github.com/tokio-rs/console/tree/main/tokio-console" 
description = """
The Tokio console: a debugger for async Rust.
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "command-line-utilities",
    "asynchronous",
]
keywords = [
    "tracing",
    "tokio-console",
    "debugging",
    "console",
    "async",
]

[dependencies]
atty = "0.2"
console-api = { version = "0.6.0", path = "../console-api", features = ["transport"] }
# Use 1.64.0 compatible version of `clap@4.1.14`.
clap = { version = "~4.1.14", features = ["wrap_help", "cargo", "derive", "env"] }
clap_complete = "~4.1.6"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tonic = { version = "0.10", features = ["transport"] }
futures = "0.3"
ratatui = { version = "0.20.1", default-features = false, features = ["crossterm"] }
tower = "0.4.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
tracing-journald = { version = "0.2", optional = true }
prost-types = "0.12"
crossterm = { version = "0.26.1", features = ["event-stream"] }
color-eyre = { version = "0.6", features = ["issue-url"] }
hdrhistogram = { version = "7.3.0", default-features = false, features = ["serialization"] }
h2 = "0.3"
regex = "1.5"
once_cell = "1.8"
humantime = "2.1.0"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
dirs = "4"
