[package]
name = "tokio-console"
version = "0.1.12"
license = "MIT"
repository = "https://github.com/tokio-rs/console"
edition = "2021"
rust-version = "1.74.0"
authors = ["Eliza Weisman <eliza@buoyant.io>", "Tokio Contributors <team@tokio.rs>",]
readme = "README.md"
default-run = "tokio-console"
homepage = "https://github.com/tokio-rs/console/tree/main/tokio-console"
description = """
The Tokio console: a debugger for async Rust.
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "command-line-utilities",
    "asynchronous",
]
keywords = [
    "tracing",
    "tokio-console",
    "debugging",
    "console",
    "async",
]

[package.metadata.wix]
upgrade-guid = "A36733B4-B8CD-440A-8E06-549EAE8A6695"
path-guid = "3DF6EE78-06E2-42BF-99AA-9A463E328BBD"
license = false
eula = false

[dependencies]
console-api = { version = "0.8.0", path = "../console-api", features = ["transport"] }
clap = { version = "~4.5.4", features = ["wrap_help", "cargo", "derive", "env"] }
clap_complete = "~4.5.2"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport"] }
futures = "0.3"
ratatui = { version = "0.26.2", default-features = false, features = ["crossterm"] }
tower = "0.4.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
tracing-journald = { version = "0.2", optional = true }
prost-types = "0.13.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }
color-eyre = { version = "0.6", features = ["issue-url"] }
hdrhistogram = { version = "7.3.0", default-features = false, features = ["serialization"] }
# Keep this in sync with the version from `tonic`.
# Because we inspect the error from tonic, we need to make sure that the
# version of h2 we use is compatible with the version of tonic we use.
h2 = "0.4"
regex = "1.5"
once_cell = "1.8"
humantime = "2.1.0"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
dirs = "5"
hyper-util = { version = "0.1.6", features = ["tokio"] }

[dev-dependencies]
trycmd = "0.15.4"
