[package]
name = "tokio-console"
version = "0.1.13"
license = "MIT"
repository = "https://github.com/tokio-rs/console"
edition = "2021"
rust-version = "1.74.0"
authors = ["Eliza Weisman <eliza@buoyant.io>", "Tokio Contributors <team@tokio.rs>",]
readme = "README.md"
default-run = "tokio-console"
homepage = "https://github.com/tokio-rs/console/tree/main/tokio-console"
description = """
The Tokio console: a debugger for async Rust.
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "command-line-utilities",
    "asynchronous",
]
keywords = [
    "tracing",
    "tokio-console",
    "debugging",
    "console",
    "async",
]

[package.metadata.wix]
upgrade-guid = "A36733B4-B8CD-440A-8E06-549EAE8A6695"
path-guid = "3DF6EE78-06E2-42BF-99AA-9A463E328BBD"
license = false
eula = false

[dependencies]
console-api = { version = "0.8.1", path = "../console-api", features = ["transport"] }
clap = { version = "~4.5.4", features = ["wrap_help", "cargo", "derive", "env"] }
clap_complete = "~4.5.2"
tokio = { version = "1.34", features = ["full", "rt-multi-thread"] }
tonic = { version = "0.14.2", features = ["transport"] }
futures = "0.3"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.17" }
tracing-journald = { version = "0.2", optional = true }
prost-types = "0.14.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
color-eyre = { version = "0.6", features = ["issue-url"] }
hdrhistogram = { version = "7.4.0", default-features = false, features = ["serialization"] }
# Keep this in sync with the version from `tonic`.
# Because we inspect the error from tonic, we need to make sure that the
# version of h2 we use is compatible with the version of tonic we use.
h2 = "0.4.6"
regex = "1.11"
once_cell = "1.17.1"
cfg-if = "1.0.0"
humantime = "2.1.0"
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5"
dirs = "6"
hyper-util = { version = "0.1.6", features = ["tokio"] }
tokio-vsock = { version = "0.7.2", features = ["tonic014"], optional = true }

[features]
# Enable support for VSOCK address family, used in VMs
vsock = ["dep:tokio-vsock"]

[dev-dependencies]
trycmd = "0.15.4"

