[package]
name = "xtask"
version = "0.1.0"
license = "MIT"
edition = "2021"
rust-version = "1.64.0"
publish = false

[dependencies]
tonic-build = { version = "0.10", default-features = false, features = [
    "prost", "transport"
] }
clap = { version = "~4.1.14", features = ["derive"] }
color-eyre = "0.6"
